# ai_a_modern_approach

02_problem_solving/01_solving_problems_by_searching/bfs_dfs/: CMakeLists.txt  README.md
02_problem_solving/01_solving_problems_by_searching/bfs_dfs/include/: .agent.hpp.swp  agent.hpp  environment.hpp
02_problem_solving/01_solving_problems_by_searching/bfs_dfs/src/: agent.cpp  environment.cpp  main.cpp
